--- a/yoga.css
+++ b/yoga.css
@@ -1,12 +1,53 @@
 body {
     background-color: #F5F5F5;
     color: #40407A;
+    font-family: Verdana, Helvetica, sans-serif;
 }
 
 header {
     background-color: #80CBC4;
+    background-image: url(lilyheader.jpg);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+nav {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+nav a {
+    text-decoration: none;
 }
 
 footer {
     background-color: #80CBC4;
+    font-style: italic;
+    text-align: center;
+    font-size: small;
+}
+
+h1 { 
+    line-height: 400%;
+    text-indent: 1em;
+}
+
+dd {
+    font-size: 90%;
+}
+
+li { 
+    font-size: 90%;
+}
+
+p {
+    width: 60%;
+}
+
+#yogadoor {
+    float: right;
+}
+
+#yogamat {
+    width: 100%;
 }
