created images folder

--- a/yoga.css
+++ b/yoga.css
@@ -6,7 +6,7 @@ body {
 
 header {
     background-color: #80CBC4;
-    background-image: url(lilyheader.jpg);
+    background-image: url(images/lilyheader.jpg);
     background-repeat: no-repeat;
     background-position: right;
 }
