--- a/yoga.css
+++ b/yoga.css
@@ -2,28 +2,10 @@ body {
     background-color: #40407A;
     margin: 0;
     color: #40407A;
-    font-family: Verdana, Helvetica, sans-serif;
 }
 
 header {
-    background-color: #40407A;
-    color: #FFFFFF;
-    background-image: url(images/sunrise.jpg);
-    background-color: 100% 100%;
-
-}
-
-nav {
-    text-align: right;
-    background-color: #FFFFFF;
-    margin: 0;
-    padding-top: 0.5em;
-    padding-bottom: 1em;
-    padding-right: 1em;
-}
-
-nav a {
-    text-decoration: none;
+    background-color: #80CBC4;
 }
 
 h2 {
@@ -31,57 +13,5 @@ h2 {
 }
 
 footer {
-    font-style: italic;
-    text-align: center;
-    font-size: small;
+    background-color: #80CBC4;
 }
-
-dd {
-    font-size: 90%;
-}
-
-li { 
-    font-size: 90%;
-}
-
-p {
-    width: 60%;
-}
-
-.wrapper {
-    width: 80%;
-    background-color: #F5F5F5;
-    padding: 2em;
-    margin-left: 0;
-    margin-right: 0;
-}
-
-.home {
-    height: 40vh;
-    padding-top: 6em;
-    padding-left: 8em;
-    font-size: 120%;
-    min-height: 300px;
-}
-
-.content {
-    height: 200px;
-    padding-top: 2em;
-    padding-left: 8em;
-    padding-bottom: 2em;
-}
-
-#mathero {
-    height: 300px;
-    background-image: url(images/yogamat.jpg);
-    background-repeat: no-repeat;
-    background-color: 100% 100%;
-}
-#loungehero {
-    height: 300px;
-    background-image: url(images/yogalounge.jpg);
-    background-repeat: no-repeat;
-    background-color: 100% 100%;
-}
-
-
