--- a/yoga.css
+++ b/yoga.css
@@ -7,7 +7,7 @@ body {
 
 header {
     background-color: #80CBC4;
-    background-image: url(/images/lilyheader.jpg);
+    background-image: url(lilyheader.jpg);
     background-repeat: no-repeat;
     background-position: right;
     
