--- a/yoga.css
+++ b/yoga.css
@@ -1,19 +1,27 @@
 body {
-    background-color: #F5F5F5;
+    background-color: #40407A;
     color: #40407A;
     font-family: Verdana, Helvetica, sans-serif;
+    max-width: 1600px;
+    min-width: 900px;
+    margin: 0;
 }
 
 header {
-    background-color: #80CBC4;
-    background-image: url(images/lilyheader.jpg);
-    background-repeat: no-repeat;
-    background-position: right;
+    background-color: #40407A;
+    background-image: url(images/sunrise.jpg);
+    background-size: 100% 100%;
+    color: #FFFFFF;
 }
 
 nav {
-    text-align: center;
-    margin-bottom: 20px;
+    text-align: right;
+    background-color: #FFFFFF;
+    margin: 0;
+    padding-top: 0.5em;
+    padding-bottom: 1em;
+    padding-right: 1em;
+    /* margin-bottom: 20px; */
 }
 
 nav a {
@@ -21,15 +29,13 @@ nav a {
 }
 
 footer {
-    background-color: #80CBC4;
     font-style: italic;
     text-align: center;
     font-size: small;
 }
 
-h1 { 
-    line-height: 400%;
-    text-indent: 1em;
+h2 {
+    margin: 0;
 }
 
 dd {
@@ -50,4 +56,41 @@ p {
 
 #yogamat {
     width: 100%;
+}
+
+#wrapper {
+    margin-right: auto;
+    margin-left: auto;
+    width: 80%;
+    background-color: #f5f5f5;
+    padding: 2em;
+}
+
+#mathero {
+    height: 300px;
+    background-image: url(/images/yogamat.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+#loungehero {
+    height: 300px;
+    background-image: url(/images/yogalounge.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+.home {
+    height: 40vh;
+    padding-top: 6em;
+    padding-left: 8em;
+    font-size: 120%;
+    min-height: 300px;
+}
+
+.content {
+    height: 200px;
+    padding-top: 2em;
+    padding-left: 8em;
+    padding-bottom: 2em;
 }
