--- a/yoga.css
+++ b/yoga.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 body {
     background-color: #40407A;
     color: #40407A;
@@ -12,6 +15,23 @@ header {
     background-image: url(images/sunrise.jpg);
     background-size: 100% 100%;
     color: #FFFFFF;
+    margin-top: 50px;
+}
+
+header h1 a {
+    text-decoration: none;
+}
+
+header h1 a:link {
+    color: #FFFFFF;
+}
+
+header h1 a:visited {
+    color: #FFFFFF;
+}
+
+header h1 a:hover {
+    color: #EDF5F5;
 }
 
 nav {
@@ -21,25 +41,53 @@ nav {
     padding-top: 0.5em;
     padding-bottom: 1em;
     padding-right: 1em;
-    /* margin-bottom: 20px; */
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 9999;
+    width: 100%;
+    height: 50px;
+    margin-bottom: 20px;
 }
 
-nav a {
-    text-decoration: none;
+nav li {
+    display: inline;
+    padding-left: 2em;
+}
+
+nav li a:link {
+    color: #3F2860;
+}
+
+nav li a:visited {
+    color: #497777;
+}
+
+nav li a:hover {
+    color: #A26100;
 }
 
 footer {
     font-style: italic;
     text-align: center;
     font-size: small;
+    clear: right;
 }
 
 h2 {
     margin: 0;
 }
 
-dd {
-    font-size: 90%;
+a {
+    text-decoration: none;
+}
+
+ul {
+    text-decoration: none;
+    margin: 0;
+    padding-right: 2em;
+    padding-bottom: 2em;
+    font-size: 1.2em;
 }
 
 li { 
@@ -71,6 +119,7 @@ p {
     background-image: url(/images/yogamat.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    clear: both;
 }
 
 #loungehero {
@@ -78,10 +127,11 @@ p {
     background-image: url(/images/yogalounge.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    clear: both;
 }
 
 .home {
-    height: 40vh;
+    height: 50vh;
     padding-top: 6em;
     padding-left: 8em;
     font-size: 120%;
@@ -89,8 +139,22 @@ p {
 }
 
 .content {
-    height: 200px;
+    height: 250px;
     padding-top: 2em;
     padding-left: 8em;
     padding-bottom: 2em;
+}
+
+.onethird {
+    float: left;
+    width: 33%;
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
+.onehalf {
+    float: left;
+    width: 50%;
+    padding-left: 2em;
+    padding-right: 2em;
 }
