--- a/yoga.css
+++ b/yoga.css
@@ -5,8 +5,6 @@ body {
     background-color: #40407A;
     color: #40407A;
     font-family: Verdana, Helvetica, sans-serif;
-    max-width: 1600px;
-    min-width: 900px;
     margin: 0;
 }
 
@@ -16,6 +14,8 @@ header {
     background-size: 100% 100%;
     color: #FFFFFF;
     margin-top: 50px;
+    font-size: 90%;
+    min-height: 200px;
 }
 
 header h1 a {
@@ -40,19 +40,20 @@ nav {
     margin: 0;
     padding-top: 0.5em;
     padding-bottom: 1em;
-    padding-right: 1em;
+    padding-right: 0;
     position: fixed;
     left: 0;
     top: 0;
     z-index: 9999;
     width: 100%;
-    height: 50px;
+    height: auto;
     margin-bottom: 20px;
 }
 
 nav li {
     display: inline;
     padding-left: 2em;
+    width: 30%;
 }
 
 nav li a:link {
@@ -67,11 +68,20 @@ nav li a:hover {
     color: #A26100;
 }
 
+section {
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+}
+
 footer {
     font-style: italic;
     text-align: center;
     font-size: small;
     clear: right;
+}
+
+h1 {
+    padding-top: 50px;
 }
 
 h2 {
@@ -107,9 +117,6 @@ p {
 }
 
 #wrapper {
-    margin-right: auto;
-    margin-left: auto;
-    width: 80%;
     background-color: #f5f5f5;
     padding: 2em;
 }
@@ -119,7 +126,8 @@ p {
     background-image: url(/images/yogamat.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    clear: both;
+    display: none;
+
 }
 
 #loungehero {
@@ -127,34 +135,82 @@ p {
     background-image: url(/images/yogalounge.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    clear: both;
+    display: none;
+}
+
+#flow {
+    display: block;
 }
 
 .home {
-    height: 50vh;
-    padding-top: 6em;
-    padding-left: 8em;
-    font-size: 120%;
-    min-height: 300px;
+    height: 20vh;
+    padding-top: 2em;
+    padding-left: 10%;
 }
 
 .content {
-    height: 250px;
+    height: 20vh;
     padding-top: 2em;
-    padding-left: 8em;
-    padding-bottom: 2em;
+    padding-left: 10%;
 }
 
-.onethird {
-    float: left;
-    width: 33%;
-    padding-left: 2em;
-    padding-right: 2em;
+@media (min-width: 600px) {
+    nav ul {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: flex-end;
+    }
+
+    nav li {
+        width: 7em;
+    }
+
+    section {
+        padding-left: 2em;
+        padding-right: 2em;
+    }
+
+    #mathero {
+        display: block;
+        padding-bottom: 1em;
+    }
+
+    #loungehero {
+        display: block;
+        padding-bottom: 1em;
+    }
+
+    #flow {
+        display: flex;
+        flex-direction: row;
+    }
 }
 
-.onehalf {
-    float: left;
-    width: 50%;
-    padding-left: 2em;
-    padding-right: 2em;
+@media (min-width: 1024px) {
+    header {
+        font-size: 120%;
+    }
+
+    nav {
+        font-weight: bold;
+    }
+
+    .home {
+        height: 50vh;
+        padding-top: 5em;
+        padding-left: 8em;
+    }
+
+    .content {
+        height: 30vh;
+        padding-top: 2em;
+        padding-left: 8em;
+    }
+
+    #wrapper {
+        width: 80%;
+        margin-right: auto;
+        margin-left: auto;
+    }
 }
+
